<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mainproject.vishnu_neelancheri.lottery.settings.NewSettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_choose_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAllCaps="false"
            />
        <TextView
            android:id="@+id/txt_selected_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_date"/>
    </LinearLayout>
    <EditText
        android:id="@+id/edt_txt_first_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_price"
        android:inputType="number"/>
    <EditText
        android:id="@+id/edt_txt_second_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_price"
        android:inputType="number"/>
    <EditText
        android:id="@+id/edt_txt_third_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/third_price"
        android:inputType="number"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
