<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mainproject.vishnu_neelancheri.lottery.cash_in.CashInActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_settings_first_prize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/txt_settings_second_prize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/txt_settings_third_prize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_select_cust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_customer"
        android:textAllCaps="false"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/txt_cust_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"/>
        <TextView
            android:id="@+id/txt_cust_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_cust_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>

    <EditText
        android:id="@+id/edt_txt_first_prize_qty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_price_qty"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/edt_txt_second_prize_qty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_price_qty"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/edt_txt_third_prize_qty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/third_price_qty"
        android:inputType="number"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_choose_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAllCaps="false"
            />
        <TextView
            android:id="@+id/txt_selected_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_total"
            android:textAllCaps="false"/>
        <TextView
            android:id="@+id/txt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"     />
    </LinearLayout>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
